<resources xmlns:xliff="http://schemas.android.com/tools">

    <!--<string name="project_number">756856295049</string>-->
    <!--<string name="google_client_id">756856295049-tabpteccbtvjk6g15vpkcmd82tu2rnhl.apps.googleusercontent.com</string>-->

    <string name="login_first_page_name">SIGN UP</string>
    <string name="login_second_page_name">LOG IN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_label">LOG IN</string>
    <string name="sing_up_label">SING IN</string>
    <string name="referral_member_email_label">Referring Member Email (optional)</string>
    <string name="format_donation_amount"><xliff:g id="value">%1$s</xliff:g></string>
    <string name="item_features">Featured</string>
    <string name="item_all_stores">All Stores</string>
    <string name="item_categories">Categories</string>
    <string name="item_tell_a_friend">Tell a Friend</string>
    <string name="space">wait...</string>
    <string name="tab_hot_deals">hot deals</string>
    <string name="tab_favorites">favorites</string>
    <string name="tab_extra">extra cash back</string>
    <string name="drawer_close">Navigation drawer close</string>
    <string name="drawer_open">Navigation drawer open</string>
    <string name="title_featured_fragment">Featured</string>
    <string name="title_all_stores_fragment">All Stores</string>
    <string name="action_search">Search</string>
    <string name="title_categories_fragment">Categories</string>
    <string name="title_tell_a_friend_fragment">Tell a Friend</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="logout">Log Out</string>
    <string name="store_visits">Store Visits</string>
    <string name="shopping_report">Shopping Report</string>
    <string name="title_notification_settings">NOTIFICATION SETTINGS</string>
    <string name="title_about">ABOUT</string>
    <string name="title_getting_started">GETTING STARTED</string>
    <string name="title_contact_us">CONTACT US</string>
    <string name="title_faq">FAQ</string>
    <string name="title_legal">LEGAL</string>
    <string name="help">Help</string>
    <string name="how_it_works">How it Works</string>
    <string name="send_app_feedback">Send App Feedback</string>
    <string name="payment_questions">Payment Questions</string>
    <string name="privacy_security">Privacy &#38; Security</string>
    <string name="terms_conditions">Terms &#38; Conditions</string>
    <string name="btn_shop_now">SHOP NOW</string>
    <string name="btn_copy_code">COPY CODE</string>
    <string name="sales_clearance">SALES/CLEARANCE</string>
    <string name="alert_about_connection">It is necessary an active connection for data update.</string>
    <string name="date_title">Date: </string>
    <string name="time_title">Time: </string>
    <string name="confirmation_title">Confirmation # :</string>
    <string name="visit_id">Visit ID: </string>
    <string name="pending_stock_title">Pending stock:</string>
    <string name="pref_show_tour_key" translatable="false">showTourKey</string>
    <string name="all_results">All Results for</string>
    <string name="tab_stores">stores</string>
    <string name="tab_products">products</string>
    <string name="tab_coupons">coupons</string>
    <string name="your_price_title">Your price:</string>
    <string name="prefix_expire">Exp.</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="known_exceptions">KNOWN EXCEPTIONS</string>
    <string name="store_description">STORE DESCRIPTION</string>
    <string name="info">info</string>
    <string name="send_password_reset_email">SEND PASSWORD RESET EMAIL</string>
    <string name="request_password_reset">Request Password Reset</string>
    <string name="input_help_text">You earn cash back and shares of stock in iConsumer with each purchase you make.</string>
    <string name="date">Date:</string>
    <string name="store_summary">Store Summary</string>
    <string name="alert_about_empty_fields">Please fill all required fields</string>
    <string name="zip_post">Zip/Postal Code</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_your_own_list_of_favorite_stores">Create your own list \n of favorite stores!</string>
    <string name="not_available_fb_share">Sorry. But you don\\\'t ability send the invite to your friends.</string>
    <string name="referral_reg_exp">http://www.igive.com/welcome/lp16/cr63b.cfm/%s</string>
    <string name="share_title">Charity Shop | Online Donation Sites | Fundraising Ideas - iGive </string>
    <string name="no_coupons_data">No coupons featured data</string>
    <string name="payments_path">https://beta1.iconsumer.com/rest/icon/api/v1/account/history/payment/</string>
    <string name="deals_notify">deals_notify</string>
    <string name="payment_notify">payment_notify</string>
    <string name="please_log_in_favorites">Please login to see your favorite stores list.</string>
    <string name="copy_to_clipboard">Code is copied to clipboard.</string>
    <string name="no_coupons">There\'s no coupons</string>
    <string name="password_conditions">Password must be at least 8 characters in length and contain at least 3 of the following 4 types of characters:\n
    - lower case letters (i.e. a-z)\n - upper case letters (i.e. A-Z)\n - numbers (i.e. 0-9)\n - special characters \n (e.g. !@#$%^*()_+~-=\{}[]:;?.)</string>
    <string name="title_next_check">Next Check</string>
    <string name="shopping_report_footer_text">Purchases are verified by the merchant and are subject to verification audit</string>
    <string name="payments_footer_text">The "Cleared" information in the table above shows the date when each check cleared the bank or was voided.
        If the column is blank, our bank has not yet reported to us that the check was cashed/deposited.</string>
    <string name="tell_a_friend_via_fb">Tell a friend via facebook</string>
    <string name="tell_a_friend_via_tw">Tell a friend via twitter</string>
    <string name="my_donations">My Donations</string>

</resources>
