<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_featured"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/item_features" />
        <item
            android:id="@+id/item_all_stores"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/item_all_stores" />
        <item
            android:id="@+id/item_categories"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/item_categories" />
        <item
            android:id="@+id/item_tell_a_friend"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/item_tell_a_friend" />
        <item
            android:id="@+id/item_account"
            android:icon="@drawable/ic_logo"
            android:title="@string/item_account" />
    </group>
</menu>