<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.login.SignInFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/abc_dialog_padding_top_material"
            android:paddingLeft="@dimen/abc_dialog_padding_material"
            android:paddingRight="@dimen/abc_dialog_padding_material"
            android:paddingTop="@dimen/abc_dialog_padding_top_material">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/mail"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:focusable="false"
                android:nextFocusDown="@id/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:focusable="false"
                android:nextFocusUp="@id/email" />

            <TextView
                android:id="@+id/forgotPasswordButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="20dp"
                android:text="@string/forgot_password"
                android:textAlignment="viewEnd"
                android:textAllCaps="false"
                android:textColor="@color/textColorSecondary" />

            <Button
                android:id="@+id/nativeLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="?android:attr/listPreferredItemHeight"
                android:text="@string/login_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/facebookLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/facebook_btn_default_normal_holo_light"
                    android:text="@string/login_label"
                    android:textColor="#ffff" />

                <Button
                    android:id="@+id/googleLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/common_signin_btn_text_normal_dark"
                    android:text="@string/login_label"
                    android:textColor="#ffff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>


