<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"

    android:layout_height="wrap_content"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        style="@style/AppTheme.CardView"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="210dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/store_log"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:gravity="start"
                android:paddingTop="5dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/store_cashback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:ellipsize="end"
                android:layout_gravity="start"
                android:text="@null"
                android:singleLine="true"
                android:textAppearance="@style/AppTheme.TextAppearance"
                android:textColor="@color/red"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/btn_buy_sale" />

            <TextView
                android:id="@+id/btn_buy_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/btn_shop_now"
                android:textAppearance="@style/AppTheme.TextAppearance"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shareButton"
                android:src="@android:drawable/ic_menu_share"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryDark"
                android:layout_below="@+id/store_log"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/space" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryDark"
                android:id="@+id/space2"
                android:layout_above="@+id/shareButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:gravity="start"
                android:paddingTop="5dp"
                android:scaleType="fitCenter"
                android:layout_below="@+id/space"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:text="@null"
                android:textAppearance="@style/AppTheme.TextAppearance"
                android:textColor="@color/primaryDark"
                android:layout_below="@+id/space"
                android:layout_toRightOf="@+id/productImage"
                android:layout_toEndOf="@+id/productImage" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:singleLine="true"
                android:text="@string/format_donation_amount"
                android:layout_below="@+id/productName"
                android:layout_toRightOf="@+id/productImage"
                android:layout_toEndOf="@+id/productImage" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryDark"
                android:id="@+id/space3"
                android:layout_below="@+id/price"
                android:layout_alignLeft="@+id/price"
                android:layout_alignStart="@+id/price" />

            <TextView
                android:id="@+id/yourPriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_gravity="start"
                android:text="@string/your_price_title"
                android:singleLine="true"
                android:textAppearance="@style/AppTheme.TextAppearance"
                android:textColor="@color/red"
                android:layout_below="@+id/space3"
                android:layout_alignLeft="@+id/space3"
                android:layout_alignStart="@+id/space3" />

            <TextView
                android:id="@+id/yourPriceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:singleLine="true"
                android:textAppearance="@style/AppTheme.TextAppearance"
                android:text="@string/format_donation_amount"
                android:textColor="@color/red"
                android:layout_alignBottom="@+id/yourPriceTitle"
                android:layout_toRightOf="@+id/yourPriceTitle"
                android:layout_toEndOf="@+id/yourPriceTitle" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
